# stampython

./: .codeclimate.yml  .coveragerc  .gitignore  .gitreview  .travis.yml  ADMINGUIDE.md  CONFIG.md  CONTRIB.md  MANIFEST.in  PLUGIN.md  README.md  TODO.md  USERGUIDE.md  alembic.ini  coverage.sh  extractpot.sh  mkdocs.yml  preload.py  project.config  requirements.txt  sendmessage.py  setconfig.txt  setup.cfg  setup.py  sonar-project.properties  stampy.py  test-requirements.txt  tox.ini
.github/: issue_template.md
ascii/: 00.txt  000.txt  0000.txt  down.txt
doc/: ADMINGUIDE.md  CONFIG.md  PLUGIN.md  TODO.md  USERGUIDE.md  index.md
stampy/: env.py  i18n.py  models.py  plugins.py  stampy.py
stampy/locale/: stampy.pot
stampy/plugin/: admin.py  alias.py  autokarma.py  base.py  chuck.py  cleanlink.py  comic.py  config.py  dilbert.py  espp.py  feed.py  forward.py  help.py  highlight.py  info.py  irccommands.py  jueves.py  karma.py  kick.py  lang.py  mel.py  obichero.py  quico.py  quote.py  remedar.py  (+6 more)
tests/: cleanup.py  test_00-setup.py  test_10-alias.py  test_10-autokarma.py  test_10-forward.py  test_10-karma.py  test_10-process.py  test_10-quote.py  test_10-sendmessage.py  test_10-updatestats.py  test_10_admin.py  test_10_alias.py  test_10_autokarma.py  test_10_comic.py  test_10_config.py  test_10_espp.py  test_10_feed.py  test_10_forward.py  test_10_help.py  test_10_hilight.py  test_10_info.py  test_10_irccommands.py  test_10_karma.py  test_10_kick.py  test_10_quote.py  test_10_stock.py  test_10_sudo.py  test_10_updatestats.py  test_10_welcome.py  test_stampy.py
(+33 files in other folders)
