[metadata]
name = stampy
summary = Telegram bot for controlling Karma
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Pablo Iranzo Gómez
author-email = Pablo.Iranzo@gmail.com
home-page = https://github.com/iranzo/stampython

[files]
packages =
    stampy

[entry_points]


[nosetests]
detailed-errors=1
with-coverage=1
cover-package=stampy
cover-erase=1
verbosity=2


[extract_messages]
input_dirs = stampy
output_file = stampy/locale/stampy.pot
